--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Children -- Russia (Federation) -- Siberia -- Juvenile literature'
 - !lcc 'PZ'
 - !lcc 'DK'
+- GITenberg
 title: Our Little Cossack Cousin in Siberia
 url: http://www.gutenberg.org/ebooks/45994
